package com.wali.live.proto.Config;

/**

java -jar -Dfile.encoding=UTF-8 ./proto/wire-compiler-2.3.0-SNAPSHOT-jar-with-dependencies.jar \
--proto_path=./proto --java_out=./modulecore/src/main/java-gen-pb/ Config.proto

*/

//命令字 zhibo.getconfig

message MiLinkConfig{
    optional uint64 heartBeatInterval   =1;//心跳的时间间隔
    optional uint32 b2TokenExpireTime   =2;//b2token过期时长（秒）
}

//业务请求req
message MiLinkGetConfigReq{
    optional uint64 timeStamp=1;
}
//业务返回rsp
message MiLinkGetConfigRsp{
    optional uint64 timeStamp           =1;//最新配置的水位
    optional MiLinkConfig config        =2;//最新的配置
    optional string jsonconfig          =3;//返回json格式的配置
}

//cmd:zhibo.get_certificate 证书请求
message MilinkCertificateReq{
    optional uint64 update_ts = 1; //初始时传0, 下次传返回的update_ts, 缓存在本地
}

message MilinkCertificateRsp{
    required uint32 ret = 1; //返回码
    optional bytes certificate = 2; //证书, 如果有改字段则更新证书
    optional uint64 update_ts = 3; //证书更新时间
}
